Social media links

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<div class="large-4 columns">
 						<span itemprop="name">Yuri Kuiper</span><br>
 						<span itemprop="telephone">06-54333981</span><br>
-						<span><a href="mailto:y.s.kuiper@live.nl" itemprop="email">y.s.kuiper@live.nl</a></span><br>
+						<span><a href="mailto:y.s.kuiper@live.nl" itemprop="email">y.s.kuiper@live.nl</a></span>
 					</div>
 					<div class="large-4 columns">
 						<address itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
@@ -114,9 +114,8 @@
 				<div class="large-6 columns">
 					<ul class="inline-list right">
 						<li><a href="http://dave78.com">Site by Dave Clayton</a></li>
-						<li><a href="#">Link 2</a></li>
-						<li><a href="#">Link 3</a></li>
-						<li><a href="#">Link 4</a></li>
+						<li><a href="https://plus.google.com/102555400755658258687" rel="publisher">Google+</a></li>
+						<li><a href="https://www.facebook.com/yuri.kuiper?fref=ts">Facebook</a></li>
 					</ul>
 				</div>
 			</div>
