--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 	<head>
 		<link rel="stylesheet" href="foundation.min.css" media="screen">
-		<title>Klusbedrijf Kuiper - Onderhoud en schilderwerken</title>
+		<title>Klusbedrijf Kuiper - Onderhoud en schilderwerken in Ede, Apeldoorn, Arnhem en Utrecht</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8">
 		<link href='http://fonts.googleapis.com/css?family=Maven+Pro:700' rel='stylesheet' type='text/css'>
