Logo, new cover image, some CSS tweaks

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 		}
 		#logo {
 			font-family: 'Maven Pro', sans-serif;
-			width: 250px;
+			width: 350px;
+			background-image: url("logo.png");
+			background-repeat: no-repeat;
+			height: 76px;
+			padding: 20px 0 10px 65px;
+		}
+		h4 {
+			margin-top: 12px;
 		}
 		</style>
 	</head>
@@ -35,7 +42,7 @@
 	<div class="row">
 		<div class="large-12 columns">
 		<div id="slider">
-			<img src="pic0_1000x400.jpg">
+			<img src="pic1_1000x400.jpg">
 		</div>
 		
 		<hr/>
@@ -62,7 +69,7 @@
 		</div>
 		
 		<div class="large-4 columns">
-			<img src="pic3_400x300.jpg">
+			<img src="pic4_400x300.jpg">
 			<a name="waar"></a>
 			<h4>Waar we werken</h4>
 			<p>Gevestigd in Ede, we zijn goed gelegen om klanten te bedienen in heel Gelderland en Utrecht, met tevreden klanten in deze steden:</p>
