Linked to Facebook biz page

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<ul class="inline-list right">
 						<li><a href="http://dave78.com">Site by Dave Clayton</a></li>
 						<li><a href="https://plus.google.com/102555400755658258687" rel="publisher">Google+</a></li>
-						<li><a href="https://www.facebook.com/yuri.kuiper?fref=ts">Facebook</a></li>
+						<li><a href="https://www.facebook.com/klusbedrijfkuiper?fref=ts">Facebook</a></li>
 					</ul>
 				</div>
 			</div>
